--- a/creditos.html
+++ b/creditos.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="download.html">Download</a>
-            <a href="https://github.com/seu-repositorio" target="_blank" class="github-icon">
+            <a href="https://github.com/Thonyy56/AlfABC" target="_blank" class="github-icon">
                 <img src="github-icon.png" alt="GitHub">
             </a>
         </nav>
