--- a/download.html
+++ b/download.html
@@ -13,7 +13,7 @@
             <a href="index.html">Home</a>
             <a href="download.html" class="active">Download</a>
             <a href="https://github.com/Thonyy56/AlfABC" target="_blank" class="github-icon">
-                <img src="github-icon.png" alt="GitHub">
+                <img src="assets/github-icon.png" alt="GitHub">
             </a>
         </nav>
     </header>
